--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,39 @@
 	width: 50%;
 	background-color: white;
 	height: 80vh;
-	margin-top: 2rem;
+	margin-top: 3rem;
+}
+
+.SearchCity {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	flex-direction: column;
 }
 
 .Weather-info {
 	color: green;
 }
-.City {
+.MainImg {
 	color: hotpink;
+}
+
+.City-logo {
+	width: 50vw;
+	height: 25vh;
+	margin: 20px auto;
+}
+
+.AppLabel {
+	color: black;
+	font-size: 20px;
+	font-weight: bold;
+}
+
+.SearchBox {
+	display: flex;
+}
+
+.SearchBox input {
+	padding: 0.5rem 0.5rem;
 }
