--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,9 @@
 	margin: auto;
 	align-items: center;
 	box-shadow: 0 3px 6px 0 #555;
-	padding: 20px 10px;
+	padding: 10px;
 	border-radius: 4px;
-	width: 50%;
+	width: 40%;
 	background-color: white;
 	height: 80vh;
 	margin-top: 3rem;
@@ -14,25 +14,26 @@
 
 .SearchCity {
 	display: flex;
-	justify-content: space-between;
+	justify-content: space-around;
 	align-items: center;
 	flex-direction: column;
-}
-
-.Weather-info {
-	color: green;
-}
-.MainImg {
-	color: hotpink;
+	height: 100%;
+	width: 100%;
+	/* border: 1px solid rebeccapurple; */
 }
 
 .City-logo {
-	width: 50vw;
+	width: 100%;
 	height: 25vh;
 	margin: 20px auto;
 }
 
 .AppLabel {
+	color: black;
+	font-size: 29px;
+	font-weight: bold;
+}
+.Weather-info {
 	color: black;
 	font-size: 20px;
 	font-weight: bold;
@@ -40,8 +41,24 @@
 
 .SearchBox {
 	display: flex;
+	border: black solid 1px;
+	margin: 20px auto;
 }
 
 .SearchBox input {
-	padding: 0.5rem 0.5rem;
+	padding: 15px 20px;
+	font-size: 15px;
+	border: none;
+	outline: none;
+	font-weight: bold;
+}
+
+.SearchBox button {
+	font-size: 15px;
+	color: white;
+	background-color: black;
+	border: none;
+	font-weight: bold;
+	padding: 0px 10px;
+	cursor: pointer;
 }
