--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@
 	color: black;
 	font-size: 29px;
 	font-weight: bold;
+	text-align: center;
 }
 .Weather-info {
 	color: black;
@@ -61,4 +62,39 @@
 	font-weight: bold;
 	padding: 0px 10px;
 	cursor: pointer;
+}
+
+.Weather {
+	width: 100%;
+	height: 100%;
+	border: 1px solid rgb(10, 6, 37);
+}
+
+.WeatherCondition {
+	display: flex;
+	align-items: center;
+	border: 1px solid slateblue;
+	width: 100%;
+	justify-content: space-around;
+}
+
+.WeatherCondition span {
+	margin: 20px auto;
+	font-size: 14px;
+}
+
+.WeatherCondition span span {
+	font-size: 28px;
+}
+
+.WeatherCondition img {
+	width: 100px;
+	height: 100px;
+	margin: 20px auto;
+}
+
+.Location {
+	font-size: 28px;
+	font-weight: bold;
+	text-align: center;
 }
