--- a/src/App.css
+++ b/src/App.css
@@ -68,13 +68,11 @@
 .Weather {
 	width: 100%;
 	height: 100%;
-	border: 1px solid rgb(10, 6, 37);
 }
 
 .WeatherCondition {
 	display: flex;
 	align-items: center;
-	border: 1px solid slateblue;
 	width: 100%;
 	justify-content: space-around;
 }
@@ -92,6 +90,7 @@
 	width: 100px;
 	height: 100px;
 	margin: 20px auto;
+	margin-bottom: 0;
 }
 
 .Location {
@@ -101,7 +100,29 @@
 }
 
 .Weather-Props {
-	border: green 1px solid;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
+	margin-top: 1rem;
+}
+
+.Weather-Prop {
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+}
+
+.Weather-Prop img {
+	width: 50px;
+}
+
+@media screen and (max-width: 800px) {
+	.App {
+		width: 90%;
+	}
+	.Location {
+		margin-top: 2rem;
+	}
+	.Weather-Props {
+		margin-top: 3rem;
+	}
 }
